My first commit

--- a/automaticaycontrol/src/main/resources/templates/index.html
+++ b/automaticaycontrol/src/main/resources/templates/index.html
@@ -76,7 +76,7 @@
     </nav><br><br>
     <h1></h1>
     <!--/Navbar-->
-    <marquee>Bienvenido al website del ingeniero Ruben@ngel. Este sitio está construido con la finalidad de intercambiar conocimientos y experiencias
+    <marquee>Bienvenido al sitio web del ingeniero Ruben@ngel. Este sitio está construido con la finalidad de intercambiar conocimientos y experiencias
         con quienes tengo o alguna vez tube la oportunidad de compartir en el ámbito académico desde mi posición de docente. Espero que aceptes mi invitación y te registres. La información solicitada
         es solo con el fin de poderte brindar una buena experiencia mientras estés en el sitio. ¡¡Éxitos!!</marquee>
     <!--Cards-->
