--- a/automaticaycontrol/src/main/resources/templates/Automatas/laboratorios.html
+++ b/automaticaycontrol/src/main/resources/templates/Automatas/laboratorios.html
@@ -76,7 +76,7 @@
     </nav><br><br>
     <h1></h1>
     <!--/Navbar-->
-    <marquee>Bienvenido al website del ingeniero Ruben@ngel. Este sitio está construido con la finalidad de intercambiar conocimientos y experiencias
+    <marquee>Bienvenido al sitio web del ingeniero Ruben@ngel. Este sitio está construido con la finalidad de intercambiar conocimientos y experiencias
         con quienes tengo o alguna vez tube la oportunidad de compartir en el ámbito académico desde mi posición de docente. Espero que aceptes mi invitación y te registres. La información solicitada
         es solo con el fin de poderte brindar una buena experiencia mientras estés en el sitio. ¡¡Éxitos!!</marquee>
     <!--Cards-->
@@ -140,7 +140,12 @@
             <li><b>Parte II.</b> <br>
                 Quiz de sustentación el día de la práctica. Vale la otra mitad.
         </ul>
-
+        <hr>
+        <h4>Práctica #4.</h4>
+        Realizar la implementación computacional de una <b>Gramática Regular</b> que permita realizar la misma tarea de la práctica #2.
+        Quiere decir que el lenguaje aceptado o generado por este autómata deberá poder ser generado por la gramática aquí
+        implementada. Tanto el autómata como la gramática generarán el mismo lenguaje. Comprobar el funcionamiento generando
+        un lenguaje con al menos diez palabras diferentes.<br><br>
         <hr>
         <!--
         <h4>Práctica #1.</h4>
