My first commit

--- a/automaticaycontrol/src/main/resources/templates/Automatas/laboratorios.html
+++ b/automaticaycontrol/src/main/resources/templates/Automatas/laboratorios.html
@@ -145,7 +145,11 @@
         Realizar la implementación computacional de una <b>Gramática Regular</b> que permita realizar la misma tarea de la práctica #2.
         Quiere decir que el lenguaje aceptado o generado por este autómata deberá poder ser generado por la gramática aquí
         implementada. Tanto el autómata como la gramática generarán el mismo lenguaje. Comprobar el funcionamiento generando
-        un lenguaje con al menos diez palabras diferentes.<br><br>
+        un lenguaje con al menos diez palabras diferentes.<br>
+        La práctica se revisa pidiendo que genere una palabra en particular entrada por teclado. <br><br>
+        <b>Fecha de entrega: 30 de abril.</b><br>
+        Grupos de tres también realizan animación.
+        <br>
         <hr>
         <!--
         <h4>Práctica #1.</h4>
